repairing bugs part 2
