# swagger/controllers/Project.js
@@ -4,26 +4,26 @@ var url = require('url');
 
 var Project = require('./ProjectService');
 
-module.exports.appProjectCommentProjectIDPUT = function appProjectCommentProjectIDPUT (req, res, next) {
-  Project.appProjectCommentProjectIDPUT(req.swagger.params, res, next);
+module.exports.projectCommentProjectIDPUT = function projectCommentProjectIDPUT (req, res, next) {
+  Project.projectCommentProjectIDPUT(req.swagger.params, res, next);
 };
 
-module.exports.appProjectsGET = function appProjectsGET (req, res, next) {
-  Project.appProjectsGET(req.swagger.params, res, next);
+module.exports.projectsGET = function projectsGET (req, res, next) {
+  Project.projectsGET(req.swagger.params, res, next);
 };
 
-module.exports.appProjectsPOST = function appProjectsPOST (req, res, next) {
-  Project.appProjectsPOST(req.swagger.params, res, next);
+module.exports.projectsPOST = function projectsPOST (req, res, next) {
+  Project.projectsPOST(req.swagger.params, res, next);
 };
 
-module.exports.appProjectsProjectIDDELETE = function appProjectsProjectIDDELETE (req, res, next) {
-  Project.appProjectsProjectIDDELETE(req.swagger.params, res, next);
+module.exports.projectsProjectIDDELETE = function projectsProjectIDDELETE (req, res, next) {
+  Project.projectsProjectIDDELETE(req.swagger.params, res, next);
 };
 
-module.exports.appProjectsProjectIDGET = function appProjectsProjectIDGET (req, res, next) {
-  Project.appProjectsProjectIDGET(req.swagger.params, res, next);
+module.exports.projectsProjectIDGET = function projectsProjectIDGET (req, res, next) {
+  Project.projectsProjectIDGET(req.swagger.params, res, next);
 };
 
-module.exports.appProjectsProjectIDPUT = function appProjectsProjectIDPUT (req, res, next) {
-  Project.appProjectsProjectIDPUT(req.swagger.params, res, next);
+module.exports.projectsProjectIDPUT = function projectsProjectIDPUT (req, res, next) {
+  Project.projectsProjectIDPUT(req.swagger.params, res, next);
 };
