# swagger/controllers/User.js
@@ -4,22 +4,22 @@ var url = require('url');
 
 var User = require('./UserService');
 
-module.exports.appUsersGET = function appUsersGET (req, res, next) {
-  User.appUsersGET(req.swagger.params, res, next);
+module.exports.usersGET = function usersGET (req, res, next) {
+  User.usersGET(req.swagger.params, res, next);
 };
 
-module.exports.appUsersPOST = function appUsersPOST (req, res, next) {
-  User.appUsersPOST(req.swagger.params, res, next);
+module.exports.usersPOST = function usersPOST (req, res, next) {
+  User.usersPOST(req.swagger.params, res, next);
 };
 
-module.exports.appUsersUserIDDELETE = function appUsersUserIDDELETE (req, res, next) {
-  User.appUsersUserIDDELETE(req.swagger.params, res, next);
+module.exports.usersUserIDDELETE = function usersUserIDDELETE (req, res, next) {
+  User.usersUserIDDELETE(req.swagger.params, res, next);
 };
 
-module.exports.appUsersUserIDGET = function appUsersUserIDGET (req, res, next) {
-  User.appUsersUserIDGET(req.swagger.params, res, next);
+module.exports.usersUserIDGET = function usersUserIDGET (req, res, next) {
+  User.usersUserIDGET(req.swagger.params, res, next);
 };
 
-module.exports.appUsersUserIDPUT = function appUsersUserIDPUT (req, res, next) {
-  User.appUsersUserIDPUT(req.swagger.params, res, next);
+module.exports.usersUserIDPUT = function usersUserIDPUT (req, res, next) {
+  User.usersUserIDPUT(req.swagger.params, res, next);
 };
